--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content>
     <ion-button color="primary" (click)="openCamera()">打开摄像头</ion-button>
-    <ion-button color="primary">打开蓝牙</ion-button>
-    <ion-button color="primary">打开GPS</ion-button>
+    <ion-button color="primary" (click)="openBluetooth()">打开蓝牙</ion-button>
+    <ion-button color="primary" (click)="openGPS()">打开GPS</ion-button>
 
 </ion-content>
